--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "UV: " + Model;
 }
 
+<!-- This template is no longer used from the dash - don't need to view things in the wl.org UV any more -->
+<!-- keep for reference though - this is how you would get that last version up for comparison -->
 <div class="row" style="margin-top: 1.5em;">
     <div class="col-sm-12">
         <a href="#" onclick="window.history.go(-1); return false;">Back to previous page</a>
