Bulk workflow tool

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_WorkflowJobList.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_WorkflowJobList.cshtml
@@ -15,7 +15,8 @@
         @foreach (var workflowJob in Model)
         {
             <tr>
-                <td>@Html.ActionLink(workflowJob.Identifier, "WorkflowCall", "WorkflowCall", new { id = workflowJob.Identifier }, new { })</td>
+                <td>@Html.ActionLink(workflowJob.Identifier, "WorkflowCall", "WorkflowCall", 
+                        new { id = ((DdsIdentifier)workflowJob.Identifier).PathElementSafe }, new { })</td>
                 <td>@StringUtils.GetFriendlyAge(workflowJob.Created)</td>
                 <td>@StringUtils.GetFriendlyAge(workflowJob.Taken)</td>
                 <td>@workflowJob.GetAltoRate()</td>
