Delete workflow job

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
@@ -23,7 +23,9 @@
 <h2>Recently Digitised</h2>
 
 <p>
-    @Html.ActionLink("View recent workflow calls", "Recent", "WorkflowCall")
+    @Html.ActionLink("All recent workflow calls", "Recent", "WorkflowCall")
+    | 
+    @Html.ActionLink("Recent workflow errors", "Errors", "WorkflowCall")
     | 
     @Html.ActionLink("View Job Processor log", "Index", "Log")
     |
