--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -259,7 +259,8 @@
                         <ul class="list-unstyled">
                             @foreach (var derivative in Model.AVDerivatives)
                             {
-                                <li>- <a href="@derivative.Id">@derivative.Label</a></li>
+                                <li>- <a target="_blank" href="@derivative.PublicUrl">@derivative.Label</a> | 
+                                    <a target="_blank" href="@derivative.DlcsUrl">(dlcs)</a></li>
                             }
                         </ul>
                     </li>
