--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -731,7 +731,7 @@
             <p>
                 This does not mean that they should be deleted, because they might belong to a different manifestation
                 (e.g., the METS structure has been rearranged across manifestations and not yet synchronised for all manifestations).
-                However, they might also represent images that have been replaced in Preservica but not deleted from the DLCS.
+                However, they might also represent images that have been renamed in storage but not deleted from the DLCS.
             </p>
             <p><a href="@Url.Action("DeleteOrphans", "Dash", new {id = Model.DdsIdentifier.PathElementSafe})" class="btn btn-info"><span class="glyphicon glyphicon-trash"></span> Delete Orphans</a></p>
             <table class="table table-hover table-condensed">
