--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <li class="@ViewBag.StopClass">@Html.ActionLink("Stop", "StopStatus", new { controller = "Dash" }, new { @class = ViewBag.StopClass })</li>
                 </ul>
                 <p class="nav navbar-text @ViewBag.HeartbeatClass" title="@heartBeatDisplay">
-                    DLCS Queue: @string.Format("{0}{1}", ViewBag.QueueLevels["incoming"], ViewBag.QueueLevels["priority"] > 0 ? string.Format(" priority:{0}", ViewBag.QueueLevels["priority"]) : string.Empty)
+                    Queue: @string.Format("{0}{1}", ViewBag.QueueLevels["incoming"], ViewBag.QueueLevels["priority"] > 0 ? string.Format(" priority:{0}", ViewBag.QueueLevels["priority"]) : string.Empty)
                     @if (ViewBag.HeartbeatWarning)
                     {
                         <text> | @heartBeatDisplay <!-- | @Html.ActionLink("Log", "Index", "Log") --></text>
