--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -50,6 +50,25 @@
             </div>
         }
     }
+    
+    @if (TempData["ClearCachesResult"] != null)
+    {
+        var clearCacheResult = JsonConvert.DeserializeObject<DeleteResult>(TempData["ClearCachesResult"].ToString());
+        if (clearCacheResult.Success)
+        {
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Success!</strong> Caches for this item have been queued for clearing.
+            </div>
+        }
+        else
+        {
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Failed to clear caches.</strong> @clearCacheResult.Message
+            </div>
+        }
+    }
     @if (TempData["remove-old-jobs"] != null)
     {
         <div class="alert alert-success alert-dismissible" role="alert">
@@ -426,7 +445,10 @@
                         <small><em>No manifest on S3 yet</em></small>
                     }
                 </li>
-                @if (metsManifestation.Sequence.Any(pf => pf.RelativeAltoPath.HasText()))
+                @{
+                    var metsManifestationHasText = metsManifestation.Sequence.Any(pf => pf.RelativeAltoPath.HasText());
+                }
+                @if (metsManifestationHasText)
                 {
                     <li class="list-group-item">
                         @using (Html.BeginForm("RefreshAll", "WorkflowJob", new {id = Model.DdsIdentifier.PathElementSafe}, FormMethod.Post))
@@ -454,6 +476,16 @@
                         }
                     </li>
                 }
+                <li class="list-group-item">
+                    @using (Html.BeginForm("ClearCaches", "WorkflowJob", new {id = Model.DdsIdentifier.PathElementSafe}, FormMethod.Post))
+                    {
+                        <input type="hidden" name="hasText" value="@metsManifestationHasText.ToString()" />
+                        <button type="submit" class="btn btn-link" title="Clear Caches">
+                            <span class="glyphicon glyphicon-refresh"></span> Clear Caches
+                        </button>
+                    }
+                    <small><em>Invalidate Cloudfront and other caches without rebuilding IIIF</em></small>
+                </li>
             </ul>
         </div>
         @* END Actions to rebuild IIIF and Text derivatives *@
