--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_JobProcessorLastRan.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_JobProcessorLastRan.cshtml
@@ -4,7 +4,7 @@
 }
 else
 {
-    <p>The DLCS Job Processor last ran @(((TimeSpan) (DateTime.Now - (DateTime?)ViewBag.Heartbeat)).ToHumanReadableString()) ago.</p>
+    <p>The DLCS Job Processor last ran @(((TimeSpan) (DateTime.UtcNow - (DateTime?)ViewBag.Heartbeat)).ToHumanReadableString()) ago.</p>
 }
 @if (ViewBag.HeartbeatWarning)
 {
