--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -903,7 +903,7 @@
         if (batch.Completed != batch.Count)
         {
             <div class="progress">
-                <a href="@Model.GetPortalPageForBatch(batch)" title="Batch @PathStringUtils.GetSimpleNameFromPath(@batch.Id): @batch.Submitted" target="_blank">
+                <a href="@Model.GetPortalPageForBatch(batch)" title="Batch @PathStringUtils.GetSimpleNameFromPath(batch.Id): @batch.Submitted" target="_blank">
                     <div class="progress-bar progress-bar-success" role="progressbar"
                          aria-valuenow="@batch.Completed" aria-valuemin="0" aria-valuemax="@batch.Count"
                          style="width: @percentComplete">
