Allow only one batch to be submitted in a sync operation

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -228,6 +228,9 @@
                     {
                         <a href="@Url.Action("Sync", "Job", new {id = Model.DdsIdentifier.PathElementSafe})" 
                            class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Sync</a>
+                        <br/>
+                        <a href="@Url.Action("SyncSingleBatch", "Job", new {id = Model.DdsIdentifier.PathElementSafe})" 
+                           class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Sync one batch</a>                                                                         
                     }
                 </div>
             </div>
