Use the right sizes

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCall.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/WorkflowCall/WorkflowCall.cshtml
@@ -119,6 +119,10 @@ else
             <td>@Model.DlcsJobCount</td>
         </tr>
         <tr>
+            <td>DLCS Ingest Job Started</td>
+            <td>@Model.IngestJobStarted</td>
+        </tr>
+        <tr>
             <td>Word Count</td>
             <td>@Model.Words</td>
         </tr>
