fix PATCH collection issue

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
@@ -14,7 +14,7 @@
         <span class="glyphicon glyphicon-ok"></span>
         Regardless of the state of this particular job,
         Manifestation @Html.ActionLink(manifestation, "Manifestation", "Dash", new {id = ((DdsIdentifier)manifestation).PathElementSafe}, new {}) was updated as "success" by this or a subsequent job.
-        That doesn't mean that that the manifestation is <em>still</em> a success.
+        That doesn't mean that the manifestation is <em>still</em> a success.
     </div>
 }
 
