style work page link red when no Catalogue API

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -264,7 +264,14 @@
                 </li>
                 <li class="list-group-item">
                     <ul class="list-unstyled">
-                        <li><a href="@Model.WorkPage">Work page</a></li>
+                        @if (Model.WorkPage.HasText())
+                        {
+                            <li><a href="@Model.WorkPage">Work page</a></li>
+                        }
+                        else
+                        {
+                            <li><span style="color:red;">Work page</span> <small>(no catalogue api)</small></li>
+                        }
                         <li><a href="@Model.CatalogueApi">Catalogue API</a> | <a href="@Model.CatalogueApiFull">Full</a></li>
                     </ul>
                 </li>
