allow resubmit button on Model.IsRunning

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Manifestation.cshtml
@@ -194,6 +194,7 @@
                         <p class="text-danger">
                             A sync is currently running, but there are no batches for the images in this manifestation.
                         </p>
+                        <p><a href="@Url.Action("Resubmit", "Job", new { id = Model.DdsIdentifier.PathElementSafe })" class="btn btn-info"><span class="glyphicon glyphicon-transfer"></span> Resubmit*</a></p>
                     }
                 </div>
             </div>
