--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     var jobDetail = Model.Jobs[0];
     ViewBag.Title = "Dash: Job " + jobDetail.Id;
-    var manifestation = jobDetail.GetManifestationIdentifier();
+    var manifestationId = Model.ManifestationIdentifiers[jobDetail.Id];
 }
 
 <h1>Job @jobDetail.Id</h1>
@@ -13,7 +13,8 @@
     <div class="alert alert-success" role="alert">
         <span class="glyphicon glyphicon-ok"></span>
         Regardless of the state of this particular job,
-        Manifestation @Html.ActionLink(manifestation, "Manifestation", "Dash", new {id = ((DdsIdentifier)manifestation).PathElementSafe}, new {}) was updated as "success" by this or a subsequent job.
+        Manifestation @Html.ActionLink(manifestationId.Value, "Manifestation", "Dash", new { id = manifestationId.PathElementSafe }, new {}) 
+        was updated as "success" by this or a subsequent job.
         That doesn't mean that the manifestation is <em>still</em> a success.
     </div>
 }
